@@ -2091,6 +2091,7 @@ the list of currently operational bans and blocks.',
 'ipb_expiry_invalid'          => 'Expiry time invalid.',
 'ipb_already_blocked'         => '"$1" is already blocked',
 'ipb_cant_unblock'            => 'Error: Block ID $1 not found. It may have been unblocked already.',
+'ipb_blocked_as_range'        => 'Error: The IP $1 is not blocked directly and cannot be unblocked. It is, however, blocked as part of the range $2, which can be unblocked.',
 'ip_range_invalid'            => 'Invalid IP range.',
 'blockme'                     => 'Block me',
 'proxyblocker'                => 'Proxy blocker',
